# learn-opengl

./: .gitignore  CMakeLists.txt  backup_main.cpp  color_learning.cpp  learn_advanced_lighting.cpp  learn_cubemap.cpp  learn_framebuffer.cpp  learn_geometry_shader.cpp  learn_model.cpp  moving_triangle.cpp  texture_learning.cpp
includes/: Camera.h  Light_Material.h  Mesh.h  Model.h  PosData.h  Shader.h
shader/: fragment_shader_moving_triangle.vert  texture_learning.frag  texture_learning.vert  vertex_shader_moving_triangle.vert
shader/blinn_phong/: blinn_phong_model.frag  blinn_phong_model.vert  blinn_phong_plane.frag
shader/color_learning/: boxes.frag  boxes.vert  ground.frag  ground.vert  light.frag  light.vert
shader/geometry_shader/: first_steps.frag  first_steps.geom  first_steps.vert  learn_geom.geom
shader/learn_cubemap/: cubemap.frag  cubemap.vert
shader/learn_framebuffer/: screen_plane.frag  screen_plane.vert
shader/learn_model/: border.frag  border.vert  model.frag
